--- a/views/index.html
+++ b/views/index.html
@@ -3,76 +3,151 @@
   <head>
     <link rel="stylesheet" type="text/css" href="../stylesheets/bootstrap.css" />
 	<link rel="stylesheet" type="text/css" href="../stylesheets/bootstrap-theme.min.css" />    
+	<link rel="stylesheet" type="text/css" href="../slick/slick.css"/>
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.3.7/slick.css"/>
+	<style type="text/css">
+		h2{
+			margin: 0;     
+			color: #D0D0D0;
+			padding-top: 20px;
+			font-size: 30px;
+			font-family: "trebuchet ms", sans-serif;    
+		}
+		.item{
+			text-align: center;
+			height: 200px;
+		}
+		.carousel{
+			margin-top: 20px;
+		}
+		.bs-example{
+			margin: 20px;
+		}
+	</style> 
   </head>
   <body>
   <div ng-controller="ItemController as itemCtrl" ng-init="init()">
-	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-		<div class="container">
-			<div class="navbar-header">
-			  <a class="navbar-brand" href="#">Sage</a>
-			</div>
-			<div class="navbar-collapse collapse">
-				<ul class="nav navbar-nav">
-					<li ng-class="{active: panel.isSelected(0)}">
-						<a href="#" ng-click="itemCtrl.getItems('All'); panel.selectTab(0)">Home</a>
-					</li>
-					<li ng-class="{active: panel.isSelected(1)}">
-						<a href="#mobileapps" ng-click="itemCtrl.getItems('Mobile Apps'); panel.selectTab(1)">Mobile Apps</a>
-					</li>
-					<li ng-class="{active: panel.isSelected(2)}">
-						<a href="#dashboards" ng-click="itemCtrl.getItems('Dashboards'); panel.selectTab(2)">Dashboards</a>
-					</li>
-					<li ng-class="{active: panel.isSelected(3)}">
-						<a href="#workflows" ng-click="itemCtrl.getItems('Workflows'); panel.selectTab(3)">Workflows</a>
-					</li>
-					<li ng-class="{active: panel.isSelected(4)}">
-						<a href="#activities" ng-click="itemCtrl.getItems('Activities'); panel.selectTab(4)">Activities</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	
-	<div class="container theme-showcase">		
-		<div class="panel" ng-show="panel.isSelected(0)">
-			<h1>Home</h1>					
-		</div>
-				
-		<div class="panel" ng-show="panel.isSelected(1)">
-			<h1>Mobile Apps</h1>	
-		</div>
-					
-		<div class="panel" ng-show="panel.isSelected(2)">
-			<h1>Dashboards</h1>		
-		</div>
-		
-		<div class="panel" ng-show="panel.isSelected(3)">
-			<h1>Workflows</h1>		
-		</div>
-		
-		<div class="panel" ng-show="panel.isSelected(4)">
-			<h1>Activities</h1>		
-		</div>
-		
-		<div class="row">
-			<div class="col-sm-4 col-md-3" ng-repeat="item in itemCtrl.items">
-				<div class="thumbnail">
-					<img width='50%' ng-src='https://gallerie.blob.core.windows.net/images/{{item.file}}.jpg'/>
-					<div class="caption">
-						<h3>{{item.name}}</h3>
-						<p>{{item.description}}<p>
-						<p>
-							<a name="download" class="btn btn-xs btn-success" href="/gallery/product/download?{{item.link}}">download this item</a>
-							<a name="install" class="btn btn-xs btn-danger" href="/gallery/product/install?{{item.link}}">install this item</a>
-						</p>
-					</div>
+	<div ng-controller="ContainerController as containerCtrl">
+		<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+			<div class="container">
+				<div class="navbar-header">
+				  <a class="navbar-brand" href="#">Sage</a>
+				</div>
+				<div class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<li ng-class="{active: panel.isSelected(0)}">
+							<a href="#" ng-click="itemCtrl.getItems('All'); panel.selectTab(0); containerCtrl.selectTab(0)">Home</a>
+						</li>
+						<li ng-class="{active: panel.isSelected(1)}">
+							<a href="#mobileapps" ng-click="itemCtrl.getItems('Mobile Apps'); panel.selectTab(1); containerCtrl.selectTab(0)">Mobile Apps</a>
+						</li>
+						<li ng-class="{active: panel.isSelected(2)}">
+							<a href="#dashboards" ng-click="itemCtrl.getItems('Dashboards'); panel.selectTab(2); containerCtrl.selectTab(0)">Dashboards</a>
+						</li>
+						<li ng-class="{active: panel.isSelected(3)}">
+							<a href="#workflows" ng-click="itemCtrl.getItems('Workflows'); panel.selectTab(3); containerCtrl.selectTab(0)">Workflows</a>
+						</li>
+						<li ng-class="{active: panel.isSelected(4)}">
+							<a href="#activities" ng-click="itemCtrl.getItems('Activities'); panel.selectTab(4); containerCtrl.selectTab(0)">Activities</a>
+						</li>
+					</ul>
 				</div>
 			</div>
-		</div>		
+		</div>
+		
+		<div class="container theme-showcase" ng-controller='CarouselController as carouselCtrl'> 		
+			<div class="panel" ng-show="panel.isSelected(0)">
+				<h1>Home</h1>					
+			</div>
+					
+			<div class="panel" ng-show="panel.isSelected(1)">
+				<h1>Mobile Apps</h1>	
+			</div>
+						
+			<div class="panel" ng-show="panel.isSelected(2)">
+				<h1>Dashboards</h1>		
+			</div>
+			
+			<div class="panel" ng-show="panel.isSelected(3)">
+				<h1>Workflows</h1>		
+			</div>
+			
+			<div class="panel" ng-show="panel.isSelected(4)">
+				<h1>Activities</h1>		
+			</div>
+			
+			
+			<div class="row" ng-show="containerCtrl.isSelected(0)">				
+				<div class="col-sm-4 col-md-3" ng-repeat="item in itemCtrl.items">
+					<div class="thumbnail">
+						<a href="/#{{item.name}}" ng-click="itemCtrl.getItem(item.name); containerCtrl.selectTab(1); carouselCtrl.initCarousel()">
+							<img width='50%' ng-src='https://gallerie.blob.core.windows.net/images/{{item.file}}.jpg'/>
+						</a>
+						<div class="caption">
+							<h3>{{item.name}}</h3>
+							<p>{{item.description}}<p>
+							<p>
+								<a name="download" class="btn btn-xs btn-success" href="/gallery/product/download?{{item.link}}">download this item</a>
+								<a name="install" class="btn btn-xs btn-danger" href="/gallery/product/install?{{item.link}}">install this item</a>
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>	
+			
+			<div ng-show="containerCtrl.isSelected(1)">
+				<div class="jumbotron" ng-repeat="item in itemCtrl.items">
+					<img width='20%' align='left' ng-src='https://gallerie.blob.core.windows.net/images/{{item.file}}.jpg'/>		
+					<h3> {{item.name}} </h3>				
+					<p>{{item.description}}<p>
+					<p>
+						<a name="download" class="btn btn-xs btn-success" href="/gallery/product/download?{{item.link}}">download this item</a>
+						<a name="install" class="btn btn-xs btn-danger" href="/gallery/product/install?{{item.link}}">install this item</a>
+					</p>
+				</div>
+
+				<div class="bs-example">
+					<div id='myCarousel' class='carousel slide'>
+						<!-- Carousel items -->
+						<div class="carousel-inner">
+							<div class="active item">
+								<h2>Slide 1</h2>
+								<div class="carousel-caption">
+								  <h3>First slide label</h3>
+								  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+								</div>
+							</div>
+							
+							<div class="item" ng-repeat="item in carouselCtrl.items">
+							    <div align='center'>
+									<a href="/#{{item.name}}" ng-click="itemCtrl.getItem(item.name)">
+										<img ng-src='https://gallerie.blob.core.windows.net/images/{{item.file}}.jpg'/>
+									</a>
+								</div>
+								<div class="carousel-caption">
+									<h2>{{item.name}}</h2>
+								</div>
+							</div>
+						</div>
+											
+						<!-- Carousel nav -->
+						<a class="carousel-control left" href="#myCarousel" data-slide="prev">
+							<span class="glyphicon glyphicon-chevron-left"/>
+						</a>
+						<a class="carousel-control right" href="#myCarousel" data-slide="next">
+							<span class="glyphicon glyphicon-chevron-right"/>
+						</a>
+					</div>
+				</div>	
+			</div>	
+		</div>
 	</div>
 	<script type="text/javascript" src="javascripts/angular.js"></script>
 	<script type="text/javascript" src="controllers/app.js"></script>
 	<script type="text/javascript" src="javascripts/jquery-1.11.1.js"></script>
-  </div>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>	
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+   </div>
   </body>
 </html>
