--- a/views/index.html
+++ b/views/index.html
@@ -107,16 +107,21 @@
 					</p>
 				</div>
 				
-				<div class="lazy">
+				<div class="multiple-items">
 					<div><div class="image"><img data-lazy="img/lazyfonz1.png"/></div></div>
 					<div><div class="image"><img data-lazy="img/lazyfonz2.png"/></div></div>
 					<div><div class="image"><img data-lazy="img/lazyfonz3.png"/></div></div>
 					<div><div class="image"><img data-lazy="img/lazyfonz4.png"/></div></div>
 					<div><div class="image"><img data-lazy="img/lazyfonz5.png"/></div></div>
 					<div><div class="image"><img data-lazy="img/lazyfonz6.png"/></div></div>
-				</div>
+				</div>			
 			</div>	
 		</div>
+		<nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+			<div class="container">
+				
+			</div>
+		</nav>
 	</div>
 	<script type="text/javascript" src="javascripts/angular.js"></script>
 	<script type="text/javascript" src="controllers/app.js"></script>
