ref web on angular

--- a/views/index.html
+++ b/views/index.html
@@ -104,7 +104,7 @@
 			</div>
 		</nav>
 	</div>
-   	<script type="text/javascript" src="javascripts/angular.js"></script>
+   	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
 	<script type="text/javascript" src="controllers/app.js"></script>
 	<script type="text/javascript" src="javascripts/jquery-1.11.1.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
