change javascripts ref

--- a/views/index.html
+++ b/views/index.html
@@ -106,11 +106,11 @@
 	</div>
    	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
 	<script type="text/javascript" src="controllers/app.js"></script>
-	<script type="text/javascript" src="javascripts/jquery-1.11.1.js"></script>
+	<script type="text/javascript" src="public/javascripts/jquery-1.11.1.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.0/highlight.min.js"></script>
 	<script type="text/javascript" src="slick/slick.js"></script>
-	<script type="text/javascript" src="javascripts/scripts.js"></script>
+	<script type="text/javascript" src="public/javascripts/scripts.js"></script>
   </body>
 </html>
