--- a/public/stylesheets/bootstrap.css
+++ b/public/stylesheets/bootstrap.css
@@ -4600,6 +4600,10 @@ a.list-group-item.active > .badge,
 .thumbnail a > img {
   margin-right: auto;
   margin-left: auto;
+  min-width : 150px;
+  min-height : 150px;
+  max-width : 150px;
+  max-height : 150px;
 }
 a.thumbnail:hover,
 a.thumbnail:focus,
