--- a/views/index.html
+++ b/views/index.html
@@ -89,12 +89,12 @@
 					</div>
 				</div>	
 				<div class="multiple-items">
-					<div><div class="image"><img data-lazy="img/lazyfonz1.png"/></div></div>
-					<div><div class="image"><img data-lazy="img/lazyfonz2.png"/></div></div>
-					<div><div class="image"><img data-lazy="img/lazyfonz3.png"/></div></div>
-					<div><div class="image"><img data-lazy="img/lazyfonz4.png"/></div></div>
-					<div><div class="image"><img data-lazy="img/lazyfonz5.png"/></div></div>
-					<div><div class="image"><img data-lazy="img/lazyfonz6.png"/></div></div>
+					<div><div class="image"><img data-lazy="../img/lazyfonz1.png"/></div></div>
+					<div><div class="image"><img data-lazy="../img/lazyfonz2.png"/></div></div>
+					<div><div class="image"><img data-lazy="../img/lazyfonz3.png"/></div></div>
+					<div><div class="image"><img data-lazy="../img/lazyfonz4.png"/></div></div>
+					<div><div class="image"><img data-lazy="../img/lazyfonz5.png"/></div></div>
+					<div><div class="image"><img data-lazy="../img/lazyfonz6.png"/></div></div>
 				</div>	
 			</div>	
 		</div>
