--- a/views/index.html
+++ b/views/index.html
@@ -80,7 +80,7 @@
 						<h3> {{item.name}} </h3>	
 					</div>
 					<div class="panel-body">
-						<img width='20%' align='left' ng-src='https://gallerie.blob.core.windows.net/images/{{item.file}}.jpg'/>					
+						<img width='20%' align='left' style='margin-right:10px' ng-src='https://gallerie.blob.core.windows.net/images/{{item.file}}.jpg'/>					
 						<p>{{item.description}}</p>
 						<p>
 							<a name="download" class="btn btn-xs btn-success" href="/product/download?{{item.link}}">download this item</a>
