--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html ng-app="gallery" ng-controller="ItemController as itemCtrl" ng-init="init()"> 
   <head>
     <link rel="stylesheet" type="text/css" href="../stylesheets/bootstrap.css" />
-	<link rel="stylesheet" type="text/css" href="../stylesheets/bootstrap-theme.min.css" />    
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"> 
 	<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.3.7/slick.css"/>
 	<style type="text/css">
