--- a/views/index.html
+++ b/views/index.html
@@ -26,6 +26,13 @@
 	</style> 
   </head>
   <body>
+	<script>
+		var req = new XMLHttpRequest();
+		req.open('GET', document.location, false);
+		req.send(null);
+		var headers = req.getAllResponseHeaders().toLowerCase();
+		alert(headers);
+	</script>
 	<div class="container" ng-controller="ContainerController as containerCtrl">
 		<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 			<div class="container">
