--- a/views/index.html
+++ b/views/index.html
@@ -24,9 +24,19 @@
 			margin: 20px;
 		}
 	</style> 
+	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+	<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+   	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
+	<script type="text/javascript" src="../controllers/app.js"></script>
+	<script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.0/highlight.min.js"></script>
+	<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.3.7/slick.min.js"></script>
+	<script type="text/javascript" src="../javascripts/scripts.js"></script>
+	<script type="text/javascript" src="../javascripts/bootstrap.file-input.js"></script>
+	<script type="text/javascript" src="../javascripts/jquery.elevatezoom.js"></script>
   </head>
   <body>
-	<div class="container" ng-controller="ContainerController as containerCtrl" ng-init="containerCtrl.getReferrer(document.referrer)">
+	<div class="container" ng-controller="ContainerController as containerCtrl">
 		<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 			<div class="container">
 				<div class="navbar-header">
@@ -50,11 +60,16 @@
 							<a href="#activities" ng-click="itemCtrl.getItems('Activities'); panel.selectTab(4); containerCtrl.selectTab(0)">Activities</a>
 						</li>
 					</ul>
-					<ul class="nav navbar-nav navbar-right">
-						<li>
-							<a id="addproduct" ng-click="containerCtrl.selectTab(2)" ng-show="false">Ajouter un produit</a> 
-						</li>
-					</ul>
+					<script>
+						var referrer = document.referrer;
+						if (referrer.length > 0){
+							document.write('<ul class="nav navbar-nav navbar-right"><li><a id="addproduct" ng-click="containerCtrl.selectTab(2)" ng-show="false">Add a product</a></li></ul>');
+						}
+						else{
+							//A enlever après test
+							document.write('<ul class="nav navbar-nav navbar-right"><li><a id="addproduct" ng-click="containerCtrl.selectTab(2)" ng-show="false">Add a product</a></li></ul>');	
+						} 
+					</script>
 				</div>
 			</div>
 		</div>
@@ -69,7 +84,7 @@
 						<p>{{item.name}}</p>
 						<p>
 							<script>
-								var referrer = document.referrer;
+								referrer = document.referrer;
 								if (referrer.length == 0){
 									document.write('<a name="download" class="btn btn-xs btn-success" href="/product/download?{{item.link}}">download this item</a>'); 									
 								} else {
@@ -82,7 +97,7 @@
 			</div>
 		</div>	
 		
-		<div ng-show="containerCtrl.isSelected(1)">
+		<div class="row" ng-show="containerCtrl.isSelected(1)">
 			<div class="panel panel-default" ng-repeat="item in itemCtrl.items">
 				<div class="panel-heading">
 					<h3> {{item.name}} </h3>	
@@ -127,8 +142,40 @@
 			</div>	
 		</div>	
 		
-		<div ng-show="containerCtrl.isSelected(2)">
-			<h1>Add product!</h1>
+		<div class="row" ng-show="containerCtrl.isSelected(2)">
+			<h1>Add a product</h1>
+			<div class="col-sm-6 col-md-4 col-md-offset-4 border-top-radius">
+				<form method="POST" enctype="multipart/form-data" action="/addProduct">
+					<fieldset>
+						<div class="form-group">
+							<label for="inputName">Name</label>
+							<input type="text" class="form-control" name="inputName" id="inputName" placeholder="Name">
+						</div>
+						<div class="form-group">
+							<label for="inputDescription">Description</label>
+							<input type="textarea" class="form-control" name="inputDescription" id="inputDescription" placeholder="Description">
+						</div>
+						<div class="form-group">
+							<label for="inputCategory">Category</label>	
+							<select class="form-control" name="inputCategory">
+								<option value="Activities">Activities</option>	
+								<option value="Dashboards">Dashboards</option>
+								<option value="Mobile Apps">Mobile Apps</option>
+								<option value="Workflows">Workflows</option>
+							</select>
+						</div>
+						<div class="form-group">
+							<label for="inputImage">Image</label>
+							<input type="file" accept=".jpg,.jpeg" id="inputImage" name="inputImage" data-filename-placement="inside">
+						</div>
+						<div class="form-group">
+							<label for="inputPackage">Package</label>
+							<input type="file" accept=".zip" id="inputPackage" name="inputPackage" data-filename-placement="inside">
+						</div>
+						<button type="submit" class="btn btn-primary">Submit</button>
+					</fieldset>
+				</form>
+			</div>
 		</div>
 		
 		<nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
@@ -137,15 +184,6 @@
 			</div>
 		</nav>
 	</div>
-	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-	<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-   	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
-	<script type="text/javascript" src="../controllers/app.js"></script>
-	<script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.0/highlight.min.js"></script>
-	<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.3.7/slick.min.js"></script>
-	<script type="text/javascript" src=" ../javascripts/scripts.js"></script>
-	<script type="text/javascript" src="../javascripts/jquery.elevatezoom.js"></script>
 	<script>
 		$(function(){
 			$(".img_02").bind("click", function(e) {
