--- a/views/index.html
+++ b/views/index.html
@@ -247,17 +247,17 @@
 	</div>
 	<script type="application/javascript" src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script type="application/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-   	<script type="application/javascript" src="../javascripts/angular.min.js"></script>
-	<script type="application/javascript" src="../controllers/app.js"></script>
+   	<script type="application/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
+	<script type="application/javascript" src="/controllers/app.js"></script>
 	<script type="application/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<script type="application/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.0/highlight.min.js"></script>
 	<script type="application/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.3.7/slick.min.js"></script>
-	<script type="application/javascript" src="../javascripts/scripts.js"></script>
-	<script type="application/javascript" src="../javascripts/bootstrap.file-input.js"></script>
-	<script type="application/javascript" src="../javascripts/jquery.elevatezoom.js"></script>
-	<script type="application/javascript" src="../javascripts/jssor.core.js"></script>
-    <script type="application/javascript" src="../javascripts/jssor.utils.js"></script>
-    <script type="application/javascript" src="../javascripts/jssor.slider.js"></script>
-    <script type="application/javascript" src="../javascripts/sliderConfig.js"></script>
+	<script type="application/javascript" src="/javascripts/scripts.js"></script>
+	<script type="application/javascript" src="/javascripts/bootstrap.file-input.js"></script>
+	<script type="application/javascript" src="/javascripts/jquery.elevatezoom.js"></script>
+	<script type="application/javascript" src="/javascripts/jssor.core.js"></script>
+    <script type="application/javascript" src="/javascripts/jssor.utils.js"></script>
+    <script type="application/javascript" src="/javascripts/jssor.slider.js"></script>
+    <script type="application/javascript" src="/javascripts/sliderConfig.js"></script>
   </body>
 </html>
